# mlip_struct_gen

./: .gitignore  .pre-commit-config.yaml  CODEBASE_MEMORY.md  Makefile  README.md  build_extension.sh  input.lammps  pyproject.toml
.claude/: statusline.sh
examples/generate_structure/water_box/: README.md
examples/lammps_examples/: 01_water_box_example.py  02_salt_water_example.py  03_metal_surface_example.py  04_metal_water_interface_example.py  05_metal_salt_water_example.py  README.md
examples/structure_examples/: 01_water_box_structures.py  02_salt_water_structures.py  03_metal_surface_structures.py  04_metal_water_interface_structures.py  05_metal_salt_water_structures.py  README.md
examples/water_example/: input.lammps  restart1.lmp  restart2.lmp
mlip_struct_gen/: __init__.py
mlip_struct_gen/analysis/: __init__.py
mlip_struct_gen/analysis/cpp/: CMakeLists.txt
mlip_struct_gen/analysis/cpp/include/: rdf_calculator.hpp  trajectory_reader.hpp  utils.hpp
mlip_struct_gen/analysis/cpp/src/: bindings.cpp  rdf_calculator.cpp  trajectory_reader.cpp
mlip_struct_gen/analysis/plotting/: __init__.py  matplotlib_backend.py  plotly_backend.py
mlip_struct_gen/analysis/properties/: __init__.py  base.py  rdf.py
mlip_struct_gen/cli/: __init__.py  dpdata_ms.py  main.py
mlip_struct_gen/cli/commands/: __init__.py  analyze.py  convert.py  dpdata.py  generate.py  wannier.py  wannier_plot.py  wc_dpdata.py
mlip_struct_gen/cli/converters/: __init__.py  mlip_sr_lr.py  trajectory_to_poscar.py
mlip_struct_gen/cli/generators/: __init__.py  constrained_metal_salt_water.py  constrained_metal_water.py  constrained_salt_water_box.py  constrained_water_box.py  graphene_water.py  metal_salt_water.py  metal_surface.py  metal_water.py  salt_water_box.py  spring_metal_salt_water.py  spring_metal_water.py  spring_salt_water_box.py  spring_water_box.py  walled_metal_salt_water.py  walled_metal_water.py  water_box.py
mlip_struct_gen/cli/lammps/: metal_salt_water.py  metal_surface.py  metal_water.py  salt_water_box.py  water_box.py
mlip_struct_gen/converter/: __init__.py  mlip_sr_lr_convert.py
mlip_struct_gen/dpdata_setup/: __init__.py  deepmd_npy_converter.py  raw_data_converter.py
mlip_struct_gen/dpmd_setup/: __init__.py  dpmd_input_parameters.py  dpmd_water_input_generator.py
mlip_struct_gen/generate_dpdata/: __init__.py  dpdata_converter.py  wc_dpdata_converter.py
mlip_struct_gen/generate_lammps_input/: __init__.py  base.py  input_parameters.py
mlip_struct_gen/generate_lammps_input/metal_salt_water/: __init__.py  generate_lammps_metal_salt_water.py  input_parameters.py
mlip_struct_gen/generate_lammps_input/metal_surface/: __init__.py  generate_lammps_metal_surface.py  input_parameters.py
mlip_struct_gen/generate_lammps_input/metal_water/: __init__.py  generate_lammps_metal_water.py  input_parameters.py
mlip_struct_gen/generate_lammps_input/salt_water_box/: __init__.py  generate_lammps_salt_water.py  input_parameters.py
mlip_struct_gen/generate_lammps_input/water_box/: __init__.py  generate_lammps_water.py  input_parameters.py
mlip_struct_gen/generate_qm_input/: trajectory_to_poscar.py
mlip_struct_gen/generate_structure/: __init__.py  utils.py
mlip_struct_gen/generate_structure/constrained_metal_salt_water/: __init__.py  generate_constrained_metal_salt_water.py  geometry_modifier.py  input_parameters.py  lammps_input.py  validation.py
mlip_struct_gen/generate_structure/constrained_metal_water/: __init__.py  generate_constrained_metal_water.py  geometry_modifier.py  input_parameters.py  lammps_input.py  validation.py
mlip_struct_gen/generate_structure/constrained_salt_water_box/: __init__.py  generate_constrained_salt_water.py  geometry_modifier.py  input_parameters.py  lammps_input.py  validation.py
mlip_struct_gen/generate_structure/constrained_water_box/: __init__.py  generate_constrained_water.py  geometry_modifier.py  input_parameters.py  lammps_input.py  validation.py
mlip_struct_gen/generate_structure/graphene_water/: __init__.py  generate_graphene_water.py  input_parameters.py  validation.py
mlip_struct_gen/generate_structure/metal_salt_water/: __init__.py  generate_metal_salt_water.py  input_parameters.py  validation.py
mlip_struct_gen/generate_structure/metal_surface/: __init__.py  generate_metal_surface.py  input_parameters.py  validation.py
mlip_struct_gen/generate_structure/metal_water/: __init__.py  generate_metal_water.py  input_parameters.py  validation.py
mlip_struct_gen/generate_structure/salt_water_box/: __init__.py  generate_salt_water_box.py  input_parameters.py  validation.py
mlip_struct_gen/generate_structure/spring_metal_salt_water/: __init__.py  generate_spring_metal_salt_water.py  input_parameters.py  lammps_input.py  validation.py
mlip_struct_gen/generate_structure/spring_metal_water/: __init__.py  generate_spring_metal_water.py  input_parameters.py  lammps_input.py  validation.py
mlip_struct_gen/generate_structure/spring_salt_water_box/: __init__.py  generate_spring_salt_water.py  input_parameters.py  lammps_input.py  validation.py
mlip_struct_gen/generate_structure/spring_water_box/: __init__.py  generate_spring_water.py  input_parameters.py  lammps_input.py  validation.py
mlip_struct_gen/generate_structure/templates/: __init__.py  salt_models.py  water_models.py
mlip_struct_gen/generate_structure/walled_metal_salt_water/: __init__.py  generate_walled_metal_salt_water.py  input_parameters.py  validation.py
mlip_struct_gen/generate_structure/walled_metal_water/: __init__.py  generate_walled_metal_water.py  input_parameters.py  validation.py
mlip_struct_gen/md_setup/: __init__.py  input_parameters.py  lammps_input_generator.py  lammps_metal_input_generator.py  lammps_metal_water_input_generator.py  lammps_salt_water_generator.py  validation.py
mlip_struct_gen/potentials/: __init__.py  lj_parameters.json
mlip_struct_gen/utils/: __init__.py  json_utils.py  logger.py  water_models.py
mlip_struct_gen/wannier_centroid/: __init__.py  compute_wannier_centroid.py  pbc_utils.py  plot_wannier_report.py
(+9 files in other folders)
